# event-study-toolkit

./: LICENSE  README.md  setup.cfg  tutorial.ipynb
src/event_study_toolkit/: event_panel.csv  eventstudy.py
