[metadata]
name = event_study_toolkit
version = 1.0.0
author = researchrebel
author_email = 
description = A package for conducting event studies
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
install_requires =
    pandas
    numpy
    statsmodels
    scipy
    pandas-market-calendars
    scikit-learn
packages = find:
package_dir =
    =src

[options.package_data]
event_study_toolkit = *.csv

[options.packages.find]
where = src

[project.urls]
Homepage = https://github.com/keysersoze23/event-study-toolkit/tree/main
